--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="" type="" href="styles.css" />
+    <link rel="stylesheet" href="style.css" />
     <title>Snake Game</title>
   </head>
   <body>
@@ -13,8 +13,10 @@
         <span class="score">Score:0</span>
         <span class="high-score">high-score:30</span>
       </div>
+      <div class="play-board"></div>
     </div>
-    <div class="play-board"></div>
-    <script src="app.js"></script>
+
+    <script src="app.js" defer></script>
+    <!-- defer tells the borwser to wait before executing js file until the page has loaded -->
   </body>
 </html>
