--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"
+    />
     <title>Snake Game</title>
   </head>
   <body>
@@ -14,6 +18,12 @@
         <span class="high-score">high-score: 0</span>
       </div>
       <div class="play-board"></div>
+      <div class="controls">
+        <i>^</i>
+        <i>v</i>
+        <i><</i>
+        <i>></i>
+      </div>
     </div>
 
     <script src="app.js" defer></script>
