--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
       </div>
       <div class="play-board"></div>
       <div class="controls">
-        <i>^</i>
-        <i>v</i>
-        <i><</i>
-        <i>></i>
+        <i data-key="ArrowUp">^</i>
+        <i data-key="ArrowDown">v</i>
+        <i data-key="ArrowLeft"><</i>
+        <i data-key="ArrowRight">></i>
       </div>
     </div>
 
